--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -20,6 +20,9 @@
 /etc/security/namespace.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/security/limits.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/logrotate.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/dovecot IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/dovecot/private IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/dovecot/conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ssh IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ssh/sshd_config.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ssh/ssh_config.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -480,6 +483,7 @@
 /etc/mrt/f87c20a8a3fd9430877268bb912248f8 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/4f6600db072b1749a9ca0d425ac267f1 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/84c22db61e541b1744969b23b19fe642 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/c470546c232e191ac1aad68a56c3f60d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/c967ac0cc71323444197c286b644762e IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/b54d38515a78ca1d021c92ce8a8bff49 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/10fc3680b2e7dd7ac232565392876b92 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
