--- a/dovecot/dovecot.conf
+++ b/dovecot/dovecot.conf
@@ -20,8 +20,29 @@
 # options. The paths listed here are for configure --prefix=/usr
 # --sysconfdir=/etc --localstatedir=/var
 
+ssl = no
+disable_plaintext_auth = no
+listen = 193.191.177.207
+
+log_path = /var/log/dovecot.log
+info_log_path = /var/log/dovecot-info.log
+
 # Enable installed protocols
 !include_try /usr/share/dovecot/protocols.d/*.protocol
+protocols = imap lmtp
+
+mail_location = maildir:~/Maildir
+
+auth_verbose = yes
+auth_mechanisms = plain
+passdb {
+  driver = passwd-file
+  args = /etc/dovecot/passwd
+}
+userdb {
+  driver = static
+  args = uid=vmail gid=vmail home=/home/vmail/%u
+}
 
 # A comma separated list of IPs or hosts where to listen in for connections. 
 # "*" listens in all IPv4 interfaces, "::" listens in all IPv6 interfaces.
